--- a/app/views/statics/banner.html.erb
+++ b/app/views/statics/banner.html.erb
@@ -5,9 +5,8 @@
     <button class="btn btn-secondary btn-sm m-1" href="#">créé le tien</button>
   </div>
 </div>
-
 <div class="jumbotron jumbotron-fluid jumbotron-secondary">
   <div class="container">
-    <h1 class="display-4 text-white"><span class="bg-primary">rejoinds-nous!</span></h1>
+    <h1 class="display-4 text-white"><span class="bg-primary">rejoins-nous !</span></h1>
   </div>
 </div>
